# labreportpy

./: .gitignore  CITATION.cff  README.md  environment.yml  pyproject.toml  setup.cfg
docs/: citeus.md  conf.py  index.rst  references.bib
docs/_static/: labreportpy.css
docs/api/: labreportpy.utils.QTYWriter.rst  labreportpy.utils.auto_color.rst  labreportpy.utils.auto_color_cmap.rst  labreportpy.utils.custom_cmap.rst  labreportpy.utils.df_to_table.rst  labreportpy.utils.diff.rst  labreportpy.utils.fit.rst  labreportpy.utils.fmt.rst  labreportpy.utils.shiftedColorMap.rst
docs/api_reference/: index.rst
docs/api_reference/color/: index.rst
docs/api_reference/io/: index.rst
docs/api_reference/utils/: index.rst
docs/changes/: template.rst
labreportpy/: __init__.py  _version.py
labreportpy/color/: __init__.py  auto_colors.py  custom_cmap.py
labreportpy/io/: __init__.py  table_writer.py
labreportpy/utils/: __init__.py  auto_color.py  custom_cmap.py  df_to_table.py  fitter.py  param_fmt.py  qty_writer.py  rolling_diff.py  shifted_colormap.py  table_writer.py
src/labreportpy/: __init__.py  _version.py  fitfunctions.py  version.py
src/labreportpy/color/: __init__.py  custom_cmap.py  shifted_colormap.py
src/labreportpy/io/: print_df.py  table_writer.py  uxd_parser.py
src/labreportpy/utils/: fitter.py  param_fmt.py  qty_writer.py
tests/: table.py
