[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyvisgen"
dynamic = ["version"]
description = "Small collection of tools for lab reports in physics."
readme = "README.md"
authors = [
  { name = "Anno Knierim" },
]
maintainers = [
  { name = "Anno Knierim", email = "anno.knierim@tu-dortmund.de" },
]
license = { text = "MIT" }
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Development Status :: 4 - Beta",
]

requires-python = ">=3.11"

dependencies = [
  "click",
  "matplotlib",
  "numpy",
  "pandas",
  "scipy",
  "toml",
  "tqdm",
  "rich",
]

[tool.setuptools_scm]
write_to = "labreportpy/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.towncrier]
    package = "labreportpy"
    directory = "docs/changes"
    filename = "CHANGES.rst"
    template = "docs/changes/template.rst"
    # let towncrier create proper links to the merged PR
    issue_format = "`#{issue} <https://github.com/aknierim/labreportpy/pull/{issue}>`__"

    [tool.towncrier.fragment.feature]
        name = "New Features"
        showcontent = true

    [tool.towncrier.fragment.bugfix]
        name = "Bug Fixes"
        showcontent = true

    [tool.towncrier.fragment.api]
        name = "API Changes"
        showcontent = true

    [tool.towncrier.fragment.datamodel]
        name = "Data Model Changes"
        showcontent = true

    [tool.towncrier.fragment.optimization]
        name = "Refactoring and Optimization"
        showcontent = true

    [tool.towncrier.fragment.maintenance]
        name = "Maintenance"
        showcontent = true

    [[tool.towncrier.section]]
        name = ""
        path = ""

