[metadata]
name = labreportpy
description = A small package for the physics lab courses at TU Dortmund university
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Anno Knierim <aknierim>
license = MIT License
url = https://github.com/aknierim/labreportpy


[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy >=1.22
    scipy ~=1.2
    matplotlib ~=3.0
    pandas
    uncertainties
    rich
    Pillow


docs =
    sphinx
    sphinx_automodapi
    numpydoc
    sphinx-design
    pandas
    ipython
    towncrier


dev =
    setuptools_scm[toml]

all =
    %(docs)s
    %(dev)s


[build_sphinx]
source_dir = docs
build_dir = docs/_build
all_files = 1
